# game-programming

./: README.md
2d_graphics/: CMakeLists.txt
2d_graphics/include/: Actor.hpp  AnimSpriteComponent.hpp  BGSpriteComponent.hpp  Component.hpp  Game.hpp  SpriteComponent.hpp
2d_graphics/src/: Actor.cpp  AnimSpriteComponent.cpp  BGSpriteComponent.cpp  Component.cpp  Game.cpp  Ship.cpp  SpriteComponent.cpp
AI/include/: AIState.hpp  MoveComponent.hpp  Random.hpp
AI/src/: AIState.cpp  Game.cpp  MoveComponent.cpp  Random.cpp
basic/src/: Game.cpp
basic_with_components/include/: Game.hpp
basic_with_components/src/: Game.cpp
beggining_game_programming_third_edition/pong/: .gitignore  CMakeLists.txt
beggining_game_programming_third_edition/pong/include/: ball.h  bat.h  game.h  main.hpp
beggining_game_programming_third_edition/pong/src/: ball.cpp  bat.cpp  main.cpp
beggining_game_programming_third_edition/run/: CMakeLists.txt
beggining_game_programming_third_edition/run/include/: Component.h  Factory.h  GameObject.h  Graphics.h  InputDispatcher.h  InputReciever.h  LevelUpdate.h  PlayerGraphics.h  PlayerUpdate.h  SoundEngine.h  Update.h
beggining_game_programming_third_edition/run/src/: Factory.cpp  GameObject.cpp  Graphics.cpp  InputDispatcher.cpp  InputReciever.cpp  LevelUpdate.cpp  PlayerGraphics.cpp  PlayerUpdate.cpp  SoundEngine.cpp  Update.cpp  main.cpp
beggining_game_programming_third_edition/timber/: CMakeLists.txt
beggining_game_programming_third_edition/timber/include/: actor.hpp  axe.hpp  branch.hpp  events.hpp  game.hpp  log.hpp  player.hpp  rip.hpp  sound.hpp  sprites.hpp
beggining_game_programming_third_edition/timber/src/: actor.cpp  axe.cpp  branch.cpp  events.cpp  log.cpp  main.cpp  player.cpp  rip.cpp  sound.cpp  sprites.cpp
beggining_game_programming_third_edition/zombie-arena/include/: arena.h  bullet.h  game.h  player.h  textureHolder.h  zombie.h
beggining_game_programming_third_edition/zombie-arena/src/: arena.cpp  bullet.cpp  game.cpp  main.cpp  player.cpp  textureHolder.cpp  zombie.cpp
include/: Game.hpp
making_3d_games_book/2d_graphics/include/: Game.hpp  Ship.hpp
making_3d_games_book/2d_graphics/src/: Actor.cpp  AnimSpriteComponent.cpp
making_3d_games_book/AI/include/: AIComponent.hpp  Component.hpp  InputComponent.hpp
making_3d_games_book/AI/src/: AIComponent.cpp  InputComponent.cpp  SpriteComponent.cpp
making_3d_games_book/basic/include/: Math.hpp
making_3d_games_book/basic_with_components/include/: Actor.hpp  CircleComponent.hpp
making_3d_games_book/basic_with_components/src/: Math.cpp
making_3d_games_book/opengl/: .clangd  CMakeLists.txt  README.md
making_3d_games_book/opengl/assets/: Cube.gpmesh  Plane.gpmesh  PointLight.gpmesh  Sphere.gpmesh  Target.gpmesh
making_3d_games_book/opengl/include/: Actor.hpp  CameraActor.hpp  CircleComponent.hpp  Component.hpp  Game.hpp  Mesh.hpp  MeshComponent.hpp  PlaneActor.hpp  Renderer.hpp  Shader.hpp  SpriteComponent.hpp  Texture.hpp  VertexArray.hpp
making_3d_games_book/opengl/notes/: GAME_ENGINE_GUIDE.md  debugging-sprites.md  homogeneous-coordinates.md  matrices.md  projections.md  spaces.md  sprite-shaders.md  transformations.md  vectors.md  z-buffer.md
making_3d_games_book/opengl/shaders/: Basic.frag  Basic.vert  Phong.frag  Phong.vert  Sprite.frag  Sprite.vert  Transform.vert  readme.md
making_3d_games_book/opengl/src/: Actor.cpp  Asteroid.cpp  CameraActor.cpp  CircleComponent.cpp  Game.cpp  Mesh.cpp  MeshComponent.cpp  MoveComponent.cpp  PlaneActor.cpp  Renderer.cpp  Shader.cpp  SpriteComponent.cpp  Texture.cpp  VertexArray.cpp  main.cpp
making_3d_games_book/pong/src/: Game.cpp
making_3d_games_book/vectors_physics/include/: Asteroid.hpp  Laser.hpp  Ship.hpp
making_3d_games_book/vectors_physics/src/: Actor.cpp  Asteroid.cpp  Component.cpp  Ship.cpp
pong/include/: Game.hpp
pong/src/: Game.cpp
src/: Game.cpp
vectors_physics/: CMakeLists.txt
vectors_physics/include/: Asteroid.hpp  Game.hpp  SpriteComponent.hpp
vectors_physics/src/: CircleComponent.cpp  Game.cpp  Laser.cpp  Ship.cpp
